--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "graphql": "^14.2.1",
     "graphql-tools": "^4.0.4",
     "knex": "^0.16.3",
+    "mongoose": "^5.5.1",
     "mysql": "^2.16.0"
   }
 }
